// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`业务自定义的AutoLink提取算法渲染测试 不合法情况 1`] = `
<DocumentFragment>
  <div
    class="container flow-markdown-body theme-default"
    data-show-indicator="false"
    dir="ltr"
    theme-mode="light"
  >
    <ol
      class="auto-hide-last-sibling-br"
    >
      

      <li>
        {xnliang@buaa.edu：非法链接
      </li>
      

    </ol>
    <br
      class="container wrapper non-select"
    />
    

  </div>
</DocumentFragment>
`;

exports[`业务自定义的AutoLink提取算法渲染测试 合法情况 1`] = `
<DocumentFragment>
  <div
    class="container flow-markdown-body theme-default"
    data-show-indicator="false"
    dir="ltr"
    theme-mode="light"
  >
    <ol
      class="auto-hide-last-sibling-br"
    >
      

      <li>
        <a
          class="link"
          href="https://www.baidu.com/"
          target="_blank"
        >
          https://www.baidu.com/
        </a>
        ：中国最大的搜索引擎，提供搜索、网页、音乐、图片、贴吧、知道等多种服务。
      </li>
      

      <li>
        <a
          class="link"
          href="https://www.google.com/"
          target="_blank"
        >
          https://www.google.com/
        </a>
        ：全球最大的搜索引擎，提供搜索、地图、翻译、电子邮箱等服务。
      </li>
      

      <li>
        <a
          class="link"
          href="https://www.gov.cn/xinwen/2023-01/17/content_5737514.html"
          target="_blank"
        >
          https://www.gov.cn/xinwen/2023-01/17/content_5737514.html
        </a>
        ：包含被转义后可能导致 Autolink 识别失败的符号（下划线）
      </li>
      

    </ol>
    <br
      class="container wrapper non-select"
    />
    

  </div>
</DocumentFragment>
`;

exports[`普通链接渲染测试 基础语法 1`] = `
<DocumentFragment>
  <div
    class="container flow-markdown-body theme-default"
    data-show-indicator="false"
    dir="ltr"
    theme-mode="light"
  >
    <div
      class="auto-hide-last-sibling-br paragraph paragraph-element br-paragraph-space"
    >
      <a
        class="link"
        href="https://bytedance.com"
        target="_blank"
      >
        link
      </a>
      <br
        class="container wrapper non-select"
      />
      <a
        class="link"
        href="https://bytedance.com"
        target="_blank"
        title="bytedance title"
      >
        link
      </a>
      <br
        class="container wrapper non-select"
      />
      link
      <br
        class="container wrapper non-select"
      />
      <a
        class="link"
        target="_blank"
      >
        link
      </a>
    </div>
    <br
      class="container wrapper non-select"
    />
    

  </div>
</DocumentFragment>
`;

exports[`普通链接渲染测试 自定义渲染 1`] = `
<DocumentFragment>
  <div
    class="container flow-markdown-body theme-default"
    data-show-indicator="false"
    dir="ltr"
    theme-mode="light"
  >
    <div
      class="auto-hide-last-sibling-br paragraph paragraph-element br-paragraph-space"
    >
      <a
        class="custom-link"
        href="https://bytedance.com"
      >
        link
      </a>
    </div>
    <br
      class="container wrapper non-select"
    />
    

  </div>
</DocumentFragment>
`;

exports[`非 http / https 的自定义链接 不允许渲染 1`] = `
<DocumentFragment>
  <div
    class="container flow-markdown-body theme-default"
    data-show-indicator="false"
    dir="ltr"
    theme-mode="light"
  >
    <ol
      class="auto-hide-last-sibling-br"
    >
      

      <li>
        first：第一个自定义链接
      </li>
      

      <li>
        second：第二个自定义链接
      </li>
      

      <li>
        third：第三个自定义链接
      </li>
      

    </ol>
    <br
      class="container wrapper non-select"
    />
    

  </div>
</DocumentFragment>
`;

exports[`非 http / https 的自定义链接 允许渲染 1`] = `
<DocumentFragment>
  <div
    class="container flow-markdown-body theme-default"
    data-show-indicator="false"
    dir="ltr"
    theme-mode="light"
  >
    <ol
      class="auto-hide-last-sibling-br"
    >
      

      <li>
        <a
          class="link"
          href="first://quick-open/abc"
          target="_blank"
        >
          first
        </a>
        ：第一个自定义链接
      </li>
      

      <li>
        <a
          class="link"
          href="second://quick-open/abc"
          target="_blank"
        >
          second
        </a>
        ：第二个自定义链接
      </li>
      

      <li>
        <a
          class="link"
          href="third://quick-open/abc"
          target="_blank"
        >
          third
        </a>
        ：第三个自定义链接
      </li>
      

    </ol>
    <br
      class="container wrapper non-select"
    />
    

  </div>
</DocumentFragment>
`;

exports[`非 http / https 的自定义链接 允许部分渲染 1`] = `
<DocumentFragment>
  <div
    class="container flow-markdown-body theme-default"
    data-show-indicator="false"
    dir="ltr"
    theme-mode="light"
  >
    <ol
      class="auto-hide-last-sibling-br"
    >
      

      <li>
        first：第一个自定义链接
      </li>
      

      <li>
        <a
          class="link"
          href="second://quick-open/abc"
          target="_blank"
        >
          second
        </a>
        ：第二个自定义链接
      </li>
      

      <li>
        third：第三个自定义链接
      </li>
      

    </ol>
    <br
      class="container wrapper non-select"
    />
    

  </div>
</DocumentFragment>
`;
